fixing ui-badge bg color for contrast

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -348,7 +348,7 @@ footer {
 }
 
 .ui-badge {
-	background: $lilac;
+	background: $light-blue;
 	color: $grey;
 }
 
